--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,47 @@
-/node_modules
-
-# Ignoruj folder node_modules
-node_modules/
-
-# Ignoruj pliki tymczasowe i pliki projektowe
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-.DS_Store
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignoruj pliki konfiguracyjne środowiska
-.env @nJ?Vc#z4niFd$Y
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Build
+dist
+build
+coverage
+
+# Testing
+coverage
+.nyc_output
+
+# IDEs and editors
+.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Misc
+.DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.cache
+.temp
+.tmp
