--- a/package.json
+++ b/package.json
@@ -1,32 +1,83 @@
 {
   "name": "liczbyslowniepopolsku",
-  "version": "1.0.8",
-  "description": "Zamien liczby na zapis slowny",
-  "main": "./src/index.js",
+  "version": "2.0.0",
+  "description": "Nowoczesna biblioteka do zamiany liczb na zapis słowny w języku polskim",
   "type": "module",
-  "author": "Konrad Tytus Gruca",
-  "license": "MIT",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./src/liczbyslownie.js": {
-      "import": "./src/liczbyslownie.js",
-      "require": "./src/liczbyslownie.js"
-    },
-    "./src/index.js": {
-      "import": "./src/index.js",
-      "require": "./src/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "jest"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "prepare": "husky install",
+    "prepublishOnly": "npm run build",
+    "docs": "typedoc --out docs src",
+    "release": "standard-version",
+    "validate": "npm-run-all --parallel lint test build"
   },
+  "keywords": [
+    "polish",
+    "numbers",
+    "words",
+    "converter",
+    "currency",
+    "amount",
+    "typescript",
+    "i18n",
+    "localization",
+    "internationalization",
+    "polski",
+    "język polski",
+    "liczby",
+    "słownie",
+    "złoty",
+    "grosz"
+  ],
+  "author": "Konrad Tytus Gruca",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/konradgruca/liczbySlowniepopolsku.git"
+  },
+  "bugs": {
+    "url": "https://github.com/konradgruca/liczbySlowniepopolsku/issues"
+  },
+  "homepage": "https://github.com/konradgruca/liczbySlowniepopolsku#readme",
   "devDependencies": {
-    "jest": "^29.5.0",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitest/coverage-v8": "^1.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
+    "standard-version": "^9.5.0",
+    "typedoc": "^0.25.12",
+    "typescript": "~5.5.0",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   },
-  "dependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^8.1.0"
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
